fix(service): 팀 채팅 목록 조회 수정 DP-260